--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>tousen1?</h1>
     </header>
     <div class="container">
-        <h2>Bienvenue sur notre site</h2>
+        <h2>Bienvenue sur notr site</h2>
         <p>Ceci est un site qui peut tous faire.</p>
     </div>
 </body>
