--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Voici notre en‑tête principale utilisée dans toutes les pages
           de notre site web -->
     <header>
-      <h1>En-tête</h1>
+      <h1>Tout en 1</h1>
     </header>
 
     <nav>
@@ -46,13 +46,10 @@
     <main>
       <!-- Il contient un article -->
       <article>
-        <h2>En-tête d'article</h2>
+        <h2>A quoi sert-il ce site?</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam
-          lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam
-          viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent
-          et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt
-          congue enim, ut porta lorem lacinia consectetur.
+          
+Bienvenue sur le site du projet étudiant "Tout en 1", votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Avec une gamme complète d'outils à portée de clic, allant de la calculatrice et du convertisseur d'unités à des utilitaires avancés tels que des IA, notre plateforme vise à vous offrir une expérience pratique et efficace. Que vous ayez besoin de convertir des mesures, résoudre des équations mathématiques complexes, ou même demander à une IA des taches, Touten1 est là pour répondre à tous vos besoins en matière d'outils numériques. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.
         </p>
 
         <h3>Sous‑section</h3>
@@ -98,7 +95,7 @@
 
     <!-- Et voici notre pied de page utilisé sur toutes les pages du site -->
     <footer>
-      <p>©Copyright 2050 par personne. Tous droits reversés.</p>
+      <p>fait par : Youcef,Mohamed et haroune pour le projet l1 d'informatique.</p>
     </footer>
   </body>
 </html>
