--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     <main>
       <!-- Il contient un article -->
       <article>
-        <h2>A quoi sert-il ce site?</h2>
-        <p>
-          
+        <h2>Touten1</h2>
+        <p>style="color: blue;">          
 Bienvenue sur le site du projet étudiant "Tout en 1", votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Avec une gamme complète d'outils à portée de clic, allant de la calculatrice et du convertisseur d'unités à des utilitaires avancés tels que des IA, notre plateforme vise à vous offrir une expérience pratique et efficace. Que vous ayez besoin de convertir des mesures, résoudre des équations mathématiques complexes, ou même demander à une IA des taches, Touten1 est là pour répondre à tous vos besoins en matière d'outils numériques. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.
         </p>
 
