--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Voici notre en‑tête principale utilisée dans toutes les pages
           de notre site web -->
     <header>
-      <h1>Tout en 1</h1>
+      <h1 style="color: blue;">Tout en 1</h1>
     </header>
 
     <nav>
@@ -46,8 +46,8 @@
     <main>
       <!-- Il contient un article -->
       <article>
-        <h2>Touten1</h2>
-        <p style="color: blue;">          
+        <h2 style="color: blue;"> Touten1</h2>
+        <p>          
 Bienvenue sur le site du projet étudiant "Tout en 1", votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Avec une gamme complète d'outils à portée de clic, allant de la calculatrice et du convertisseur d'unités à des utilitaires avancés tels que des IA, notre plateforme vise à vous offrir une expérience pratique et efficace. Que vous ayez besoin de convertir des mesures, résoudre des équations mathématiques complexes, ou même demander à une IA des taches, Touten1 est là pour répondre à tous vos besoins en matière d'outils numériques. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.
         </p>
 
