--- a/cal.html
+++ b/cal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,48 +7,69 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f1f1f1;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         .calculator {
-            width: 300px;
-            margin: 50px auto;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f9f9f9;
+            text-align: center;
         }
         input[type="text"] {
             width: 100%;
             margin-bottom: 10px;
             padding: 10px;
             font-size: 18px;
+            border: none;
+            border-bottom: 2px solid #ddd;
+            outline: none;
         }
         input[type="button"] {
-            width: 100%;
-            padding: 10px;
+            width: 50px;
+            height: 50px;
+            margin: 5px;
             font-size: 18px;
+            border: none;
+            background-color: #f1f1f1;
             cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        input[type="button"]:hover {
+            background-color: #ddd;
         }
     </style>
 </head>
 <body>
     <div class="calculator">
         <input type="text" id="result" readonly>
+        <br>
         <input type="button" value="1" onclick="appendToResult('1')">
         <input type="button" value="2" onclick="appendToResult('2')">
         <input type="button" value="3" onclick="appendToResult('3')">
         <input type="button" value="+" onclick="appendToResult('+')">
+        <br>
         <input type="button" value="4" onclick="appendToResult('4')">
         <input type="button" value="5" onclick="appendToResult('5')">
         <input type="button" value="6" onclick="appendToResult('6')">
         <input type="button" value="-" onclick="appendToResult('-')">
+        <br>
         <input type="button" value="7" onclick="appendToResult('7')">
         <input type="button" value="8" onclick="appendToResult('8')">
         <input type="button" value="9" onclick="appendToResult('9')">
         <input type="button" value="*" onclick="appendToResult('*')">
+        <br>
         <input type="button" value="0" onclick="appendToResult('0')">
         <input type="button" value="." onclick="appendToResult('.')">
         <input type="button" value="/" onclick="appendToResult('/')">
         <input type="button" value="C" onclick="clearResult()">
+        <br>
         <input type="button" value="=" onclick="calculate()">
     </div>
 
