--- a/cal.html
+++ b/cal.html
@@ -47,6 +47,7 @@
     </style>
 </head>
 <body>
+    <h1>Ma Super Calculatrice</h1>
     <div class="calculator">
         <input type="text" id="result" readonly>
         <br>
