--- a/cal.html
+++ b/cal.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <h1>Ma Super Calculatrice</h1>
+    <h1 style="text-align: center;">Ma Super Calculatrice</h1>
     <div class="calculator">
         <input type="text" id="result" readonly>
         <br>
