--- a/cal.html
+++ b/cal.html
@@ -23,6 +23,7 @@
             font-size: 24px;
         }
         .subheader {
+            color: red;
             position: absolute;
             top: 60px;
             left: 20px;
