--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <nav>
       <ul>
-        <li><a href="cal.html">Accuei</a></li>
+        <li><a href="index.html">Accueil</a></li>
         <li><a href="#">L'équipe</a></li>
         <li><a href="#">Projets</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="">Contact</a></li>
       </ul>
 
       <!-- Un formulaire de recherche est une autre façon de naviguer de
