--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="index.html">Accueil</a></li>
         <li><a href="#">L'équipe</a></li>
         <li><a href="#">Projets</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <!-- Un formulaire de recherche est une autre façon de naviguer de
