--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="number">
+        <div class="mumber">
             <h2>Youcef Malek</h2>
             <p>Poste : développeur</p>
             <p>Email :malek2002.pro@yahoo.com</p>
