--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="mumber">
+        <div class="member">
             <h2>Youcef Malek</h2>
             <p>Poste : développeur</p>
             <p>Email :malek2002.pro@yahoo.com</p>
@@ -45,7 +45,7 @@
             <p>Téléphone : +1234567890</p>
         </div>
         <div class="member">
-            <h2>Haroune</h2>
+            <h2>Haroun</h2>
             <p>Poste : développeur</p>
             <p>Email : email3@example.com</p>
             <p>Téléphone : +1234567890</p>
