--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,11 @@
             <h2>Mohamed</h2>
             <p>Poste : développeur</p>
             <p>Email : email2@example.com</p>
-            <p>Téléphone : +1234567890</p>
         </div>
         <div class="member">
             <h2>Haroun</h2>
             <p>Poste : développeur</p>
-            <p>Email : email3@example.com</p>
-            <p>Téléphone : +1234567890</p>
+            <p>Email : harioun01@gmail.com</p>
         </div>
     </div>
 </body>
