--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Accueil</a></li>
+        <li><a href="cal.html">Calculette</a></li>
         <li><a href="#">L'équipe</a></li>
         <li><a href="#">Projets</a></li>
         <li><a href="contact.html">Contact</a></li>
