--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+t<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -28,7 +28,7 @@
     <nav>
       <ul>
         <li><a href="cal.html">Calculette</a></li>
-        <li><a href="#">L'équipe</a></li>
+        <li><a href="conv.html">Convertisseur</a></li>
         <li><a href="#">Projets</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
