--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ t<!doctype html>
   <head>
     <meta charset="utf-8" />
 
-    <title>Intitulé de ma page</title>
+    <title>Touten1</title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One"
       rel="stylesheet"
