--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ t<!doctype html>
     <nav>
       <ul>
         <li><a href="cal.html">Calculette</a></li>
-        <li><a href="con.html">Convertisseur</a></li>
+        <li><a href="#">Convertisseur</a></li>
         <li><a href="#">Projets</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
