--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ t<!doctype html>
     <main>
       <!-- Il contient un article -->
       <article>
-        <h2 style="color: blue;"> Touten1</h2>
+        <header>
+  <h1 style="color: blue; margin-left: 20px;">Tout en 1</h1>
+</header>
         <p>          
 Bienvenue sur le site du projet étudiant "Tout en 1", votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Avec une gamme complète d'outils à portée de clic, allant de la calculatrice et du convertisseur d'unités à des utilitaires avancés tels que des IA, notre plateforme vise à vous offrir une expérience pratique et efficace. Que vous ayez besoin de convertir des mesures, résoudre des équations mathématiques complexes, ou même demander à une IA des taches, Touten1 est là pour répondre à tous vos besoins en matière d'outils numériques. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.
         </p>
