--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ t<!doctype html>
     <!-- Voici notre en‑tête principale utilisée dans toutes les pages
           de notre site web -->
     <header>
-      <h1 style="color: blue; margin-left: 20px;">Tout en 1</h1>
+      <h1 style="color: red; margin-left: 20px;">Tout en 1</h1>
     </header>
 
     <nav>
