--- a/index.html
+++ b/index.html
@@ -17,13 +17,66 @@ t<!doctype html>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
-
-  <body>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f1f1f1;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .header {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            color: blue;
+            font-size: 24px;
+        }
+        .subheader {
+            color: red;
+            position: absolute;
+            top: 60px;
+            left: 20px;
+            font-size: 18px;
+        }
+        .calculator {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            text-align: center;
+        }
+        input[type="text"] {
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 10px;
+            font-size: 18px;
+            border: none;
+            border-bottom: 2px solid #ddd;
+            outline: none;
+        }
+        input[type="button"] {
+            width: 50px;
+            height: 50px;
+            margin: 5px;
+            font-size: 18px;
+            border: none;
+            background-color: #f1f1f1;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        input[type="button"]:hover {
+            background-color: #ddd;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">Touten1</div>  <body>
     <!-- Voici notre en‑tête principale utilisée dans toutes les pages
           de notre site web -->
-    <header>
-      <h1 style="color: blue; margin-left: 20px;">Tout en 1</h1>
-    </header>
 
     <nav>
       <ul>
