--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ t<!doctype html>
             top: 20px;
             left: 20px;
             color: blue;
-            font-size: 24px;
+            font-size: 35px;
         }
         .subheader {
             color: red;
@@ -74,7 +74,7 @@ t<!doctype html>
     </style>
 </head>
 <body>
-    <div class="header">Touten1</div>  <body>
+    <div class="header">ToutEn1</div>  <body>
     <!-- Voici notre en‑tête principale utilisée dans toutes les pages
           de notre site web -->
 
