--- a/index.html
+++ b/index.html
@@ -1,127 +1,97 @@
-t<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-
-    <title>Touten1</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One"
-      rel="stylesheet"
-      type="text/css" />
-    <link rel="stylesheet" href="style.css" />
-
-    <!-- Les trois lignes ci‑dessous sont un correctif pour que la sémantique
-          HTML5 fonctionne correctement avec les anciennes versions de
-          Internet Explorer-->
-    <!--[if lt IE 9]>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-    <![endif]-->
-  </head>
-<style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f1f1f1;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .header {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: blue;
-            font-size: 35px;
-        }
-        .subheader {
-            color: red;
-            position: absolute;
-            top: 60px;
-            left: 20px;
-            font-size: 18px;
-        }
-       
-    </style>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Touten1</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Open Sans Condensed', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f1f1f1;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+      display: grid;
+      grid-template-columns: 1fr 3fr;
+      gap: 20px;
+    }
+    header {
+      grid-column: 1 / span 2;
+      margin-bottom: 20px;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+    article {
+      background-color: white;
+      padding: 20px;
+    }
+    h1, h2, h3 {
+      color: blue;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
-    <div class="header">ToutEn1</div>  <body>
-    <!-- Voici notre en‑tête principale utilisée dans toutes les pages
-          de notre site web -->
+  <header>
+    <h1>Touten1</h1>
+    <p class="subheader">Votre boîte à outils numérique ultime</p>
+  </header>
 
-    <nav>
+  <nav>
+    <ul>
+      <li><a href="cal.html">Calculette</a></li>
+      <li><a href="con.html">Convertisseur</a></li>
+      <li><a href="#">Projets</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <form>
+      <input type="search" name="q" placeholder="Rechercher">
+      <input type="submit" value="Lancer !">
+    </form>
+  </nav>
+
+  <div class="container">
+    <article>
+      <h2>Bienvenue sur Touten1</h2>
+      <p>Votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.</p>
+
+      <h3>Sous-section</h3>
+      <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
+
+      <h3>Autre sous-section</h3>
+      <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
+    </article>
+
+    <aside>
+      <h2>En relation</h2>
       <ul>
-        <li><a href="cal.html">Calculette</a></li>
-        <li><a href="con.html">Convertisseur</a></li>
-        <li><a href="#">Projets</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#">Combien j'aime être près des rivages</a></li>
+        <li><a href="#">Combien j'aime être près de la mer</a></li>
+        <li><a href="#">Bien que dans le nord de l'Angleterre</a></li>
+        <li><a href="#">Il n'arrête jamais de pleuvoir</a></li>
+        <li><a href="#">Eh bien…</a></li>
       </ul>
+    </aside>
+  </div>
 
-      <!-- Un formulaire de recherche est une autre façon de naviguer de
-            façon non‑linéaire dans un site. -->
-
-      <form>
-        <input type="search" name="q" placeholder="Rechercher" />
-        <input type="submit" value="Lancer !" />
-      </form>
-    </nav>
-
-    <!-- Ici nous mettons le contenu de la page -->
-    <main>
-      <!-- Il contient un article -->
-      <article>
-        <header>
-  <h2 style="color: blue;">Touten1</h2>
-</header>
-        <p>          
-Bienvenue sur le site du projet étudiant "Tout en 1", votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Avec une gamme complète d'outils à portée de clic, allant de la calculatrice et du convertisseur d'unités à des utilitaires avancés tels que des IA, notre plateforme vise à vous offrir une expérience pratique et efficace. Que vous ayez besoin de convertir des mesures, résoudre des équations mathématiques complexes, ou même demander à une IA des taches, Touten1 est là pour répondre à tous vos besoins en matière d'outils numériques. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.
-        </p>
-
-        <h3>Sous‑section</h3>
-        <p>
-          Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum
-          dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem.
-          Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.
-        </p>
-        <p>
-          Pelientesque auctor nisi id magna consequat sagittis. Curabitur
-          dapibus, enim sit amet elit pharetra tincidunt feugiat nist imperdiet.
-          Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.
-        </p>
-
-        <h3>Autre sous‑section</h3>
-        <p>
-          Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum
-          soclis natoque penatibus et manis dis parturient montes, nascetur
-          ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem
-          facilisis semper ac in est.
-        </p>
-        <p>
-          Vivamus fermentum semper porta. Nunc diam velit, adipscing ut
-          tristique vitae sagittis vel odio. Maecenas convallis ullamcorper
-          ultricied. Curabitur ornare, ligula semper consectetur sagittis, nisi
-          diam iaculis velit, is fringille sem nunc vet mi.
-        </p>
-      </article>
-
-      <!-- Le contenu « à côté » peut aussi être intégré dans le contenu
-            principal -->
-      <aside>
-        <h2>En relation</h2>
-        <ul>
-          <li><a href="#">Combien j'aime être près des rivages</a></li>
-          <li><a href="#">Combien j'aime être près de la mer</a></li>
-          <li><a href="#">Bien que dans le nord de l'Angleterre</a></li>
-          <li><a href="#">Il n'arrête jamais de pleuvoir</a></li>
-          <li><a href="#">Eh bien…</a></li>
-        </ul>
-      </aside>
-    </main>
-
-    <!-- Et voici notre pied de page utilisé sur toutes les pages du site -->
-    <footer>
-      <p>fait par : Youcef,Mohamed et haroune pour le projet l1 d'informatique.</p>
-    </footer>
-  </body>
+  <footer>
+    <p>© 2050 Touten1 - Fait par Youcef, Mohamed et Haroune pour le projet L1 d'informatique.</p>
+  </footer>
+</body>
 </html>
+
