--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@
       font-family: 'Open Sans Condensed', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f1f1f1;
+      background-color: #cceeff; /* Bleu clair */
     }
     .container {
       max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
-      display: grid;
-      grid-template-columns: 1fr 3fr;
-      gap: 20px;
     }
     header {
-      grid-column: 1 / span 2;
       margin-bottom: 20px;
     }
     nav ul {
@@ -34,64 +30,4 @@
       margin-right: 20px;
     }
     article {
-      background-color: white;
-      padding: 20px;
-    }
-    h1, h2, h3 {
-      color: blue;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Touten1</h1>
-    <p class="subheader">Votre boîte à outils numérique ultime</p>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="cal.html">Calculette</a></li>
-      <li><a href="con.html">Convertisseur</a></li>
-      <li><a href="#">Projets</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <form>
-      <input type="search" name="q" placeholder="Rechercher">
-      <input type="submit" value="Lancer !">
-    </form>
-  </nav>
-
-  <div class="container">
-    <article>
-      <h2>Bienvenue sur Touten1</h2>
-      <p>Votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.</p>
-
-      <h3>Sous-section</h3>
-      <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
-
-      <h3>Autre sous-section</h3>
-      <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
-    </article>
-
-    <aside>
-      <h2>En relation</h2>
-      <ul>
-        <li><a href="#">Combien j'aime être près des rivages</a></li>
-        <li><a href="#">Combien j'aime être près de la mer</a></li>
-        <li><a href="#">Bien que dans le nord de l'Angleterre</a></li>
-        <li><a href="#">Il n'arrête jamais de pleuvoir</a></li>
-        <li><a href="#">Eh bien…</a></li>
-      </ul>
-    </aside>
-  </div>
-
-  <footer>
-    <p>© 2050 Touten1 - Fait par Youcef, Mohamed et Haroune pour le projet L1 d'informatique.</p>
-  </footer>
-</body>
-</html>
-
+     
