--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     header {
       margin-bottom: 20px;
     }
+    nav, article {
+      background-color: #d9f2ff; /* Bleu clair légèrement plus foncé */
+      padding: 20px;
+      border-radius: 10px; /* Ajout de coins arrondis */
+    }
     nav ul {
       list-style: none;
       padding: 0;
@@ -28,10 +33,6 @@
     nav ul li {
       display: inline;
       margin-right: 20px;
-    }
-    article {
-      background-color: white;
-      padding: 20px;
     }
     h1, h2, h3 {
       color: blue;
@@ -79,6 +80,3 @@
   </footer>
 </body>
 </html>
-
-    article {
-     
