--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
       margin: 0 auto;
       padding: 20px;
     }
-    header {
-      margin-bottom: 20px;
-    }
+     .header {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            color: blue;
+            font-size: 35px;
+        }
     nav, article {
-      background-color: #d9f2ff; /* Bleu clair légèrement plus foncé */
+      background-color: #cceeff; /* Bleu clair légèrement plus foncé */
       padding: 20px;
       border-radius: 10px; /* Ajout de coins arrondis */
     }
@@ -45,7 +49,7 @@
 </head>
 <body>
   <header>
-    <h1>Touten1</h1>
+    <h1>ToutEn1</h1>
     <p class="subheader">Votre boîte à outils numérique ultime</p>
   </header>
 
