--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: 'Open Sans Condensed', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #cceeff; /* Bleu clair */
+      background-color: #8bc6ec; /* Bleu clair */
     }
     .container {
       max-width: 1200px;
@@ -25,7 +25,7 @@
             font-size: 35px;
         }
     nav, article {
-      background-color: #cceeff; /* Bleu clair légèrement plus foncé */
+      background-color: #8bc6ec; /* Bleu clair légèrement plus foncé */
       padding: 20px;
       border-radius: 10px; /* Ajout de coins arrondis */
     }
