--- a/cal.html
+++ b/cal.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f1f1f1;
+            background-color: #8bc6ec;
             margin: 0;
             padding: 0;
             display: flex;
@@ -30,7 +30,7 @@
             font-size: 18px;
         }
         .calculator {
-            background-color: #fff;
+            background-color: ##17202A;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
@@ -51,7 +51,7 @@
             margin: 5px;
             font-size: 18px;
             border: none;
-            background-color: #f1f1f1;
+            background-color: #E04F30;
             cursor: pointer;
             transition: background-color 0.3s;
         }
