--- a/cal.html
+++ b/cal.html
@@ -30,7 +30,7 @@
             font-size: 18px;
         }
         .calculator {
-            background-color: #060100;
+            background-color: black;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
