--- a/cal.html
+++ b/cal.html
@@ -37,7 +37,7 @@
             text-align: center;
         }
         input[type="text"] {
-            width: 100%;
+            width: calc(100% - 20px);
             margin-bottom: 10px;
             padding: 10px;
             font-size: 18px;
