--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             top: 20px;
             left: 20px;
             color: blue;
-            font-size: 50px;
+            font-size: 80px;
         }
     nav, article {
       background-color: #8bc6ec; /* Bleu clair légèrement plus foncé */
@@ -68,7 +68,7 @@
 
   <div class="container">
     <article>
-      <h2>Bienvenue sur Touten1</h2>
+      <h2>Tout En 1:</h2>
       <p>Votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.</p>
 
       <h3>Sous-section</h3>
