--- a/cal.html
+++ b/cal.html
@@ -47,15 +47,13 @@
             border-bottom: 2px solid #ddd;
             outline: none;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        td {
-            padding: 5px;
+        .button-row {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
         }
         input[type="button"] {
-            width: 50px;
+            width: calc(25% - 10px);
             height: 50px;
             font-size: 18px;
             border: none;
@@ -73,35 +71,33 @@
     <div class="subheader">Ma Super Calculatrice</div>
     <div class="calculator">
         <input type="text" id="result" readonly>
-        <table>
-            <tr>
-                <td><input type="button" value="1" onclick="appendToResult('1')"></td>
-                <td><input type="button" value="2" onclick="appendToResult('2')"></td>
-                <td><input type="button" value="3" onclick="appendToResult('3')"></td>
-                <td><input type="button" value="+" onclick="appendToResult('+')"></td>
-            </tr>
-            <tr>
-                <td><input type="button" value="4" onclick="appendToResult('4')"></td>
-                <td><input type="button" value="5" onclick="appendToResult('5')"></td>
-                <td><input type="button" value="6" onclick="appendToResult('6')"></td>
-                <td><input type="button" value="-" onclick="appendToResult('-')"></td>
-            </tr>
-            <tr>
-                <td><input type="button" value="7" onclick="appendToResult('7')"></td>
-                <td><input type="button" value="8" onclick="appendToResult('8')"></td>
-                <td><input type="button" value="9" onclick="appendToResult('9')"></td>
-                <td><input type="button" value="*" onclick="appendToResult('*')"></td>
-            </tr>
-            <tr>
-                <td><input type="button" value="0" onclick="appendToResult('0')"></td>
-                <td><input type="button" value="." onclick="appendToResult('.')"></td>
-                <td><input type="button" value="/" onclick="appendToResult('/')"></td>
-                <td><input type="button" value="C" onclick="clearResult()"></td>
-            </tr>
-            <tr>
-                <td colspan="4"><input type="button" value="=" onclick="calculate()"></td>
-            </tr>
-        </table>
+        <div class="button-row">
+            <input type="button" value="1" onclick="appendToResult('1')">
+            <input type="button" value="2" onclick="appendToResult('2')">
+            <input type="button" value="3" onclick="appendToResult('3')">
+            <input type="button" value="+" onclick="appendToResult('+')">
+        </div>
+        <div class="button-row">
+            <input type="button" value="4" onclick="appendToResult('4')">
+            <input type="button" value="5" onclick="appendToResult('5')">
+            <input type="button" value="6" onclick="appendToResult('6')">
+            <input type="button" value="-" onclick="appendToResult('-')">
+        </div>
+        <div class="button-row">
+            <input type="button" value="7" onclick="appendToResult('7')">
+            <input type="button" value="8" onclick="appendToResult('8')">
+            <input type="button" value="9" onclick="appendToResult('9')">
+            <input type="button" value="*" onclick="appendToResult('*')">
+        </div>
+        <div class="button-row">
+            <input type="button" value="0" onclick="appendToResult('0')">
+            <input type="button" value="." onclick="appendToResult('.')">
+            <input type="button" value="/" onclick="appendToResult('/')">
+            <input type="button" value="C" onclick="clearResult()">
+        </div>
+        <div class="button-row">
+            <input type="button" value="=" onclick="calculate()">
+        </div>
     </div>
 
     <script>
