--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
       margin: 0;
       padding: 0;
       background-color: #8bc6ec; /* Bleu clair */
+      display: flex;
+      min-height: 100vh;
+    }
+    .sidebar {
+      background-color: #1e90ff; /* Bleu */
+      color: white;
+      padding: 20px;
+      width: 200px;
     }
     .container {
       max-width: 1200px;
-      margin: 0 auto;
+      margin: auto;
       padding: 20px;
     }
-     .header {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: blue;
-            font-size: 80px;
-        }
     nav, article {
       background-color: #8bc6ec; /* Bleu clair légèrement plus foncé */
       padding: 20px;
       border-radius: 10px; /* Ajout de coins arrondis */
+      flex: 1;
     }
     nav ul {
       list-style: none;
@@ -35,8 +37,14 @@
       margin: 0;
     }
     nav ul li {
-      display: inline;
-      margin-right: 20px;
+      margin-bottom: 10px;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+    nav ul li a:hover {
+      text-decoration: underline;
     }
     h1, h2, h3 {
       color: blue;
@@ -48,25 +56,24 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>ToutEn1</h1>
-    <p class="subheader">Votre boîte à outils numérique ultime</p>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="cal.html">Calculette</a></li>
-      <li><a href="con.html">Convertisseur</a></li>
-      <li><a href="#">Projets</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <form>
-      <input type="search" name="q" placeholder="Rechercher">
-      <input type="submit" value="Lancer !">
-    </form>
-  </nav>
+  <div class="sidebar">
+    <h2>Outils</h2>
+    <nav>
+      <ul>
+        <li><a href="cal.html">Calculette</a></li>
+        <li><a href="con.html">Convertisseur</a></li>
+        <li><a href="#">Projets</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 
   <div class="container">
+    <header>
+      <h1>ToutEn1</h1>
+      <p class="subheader">Votre boîte à outils numérique ultime</p>
+    </header>
+
     <article>
       <h2>Tout En 1:</h2>
       <p>Votre boîte à outils numérique ultime pour simplifier vos tâches quotidiennes. Explorez nos fonctionnalités variées et simplifiez votre quotidien dès aujourd'hui avec Touten1.</p>
@@ -84,3 +91,4 @@
   </footer>
 </body>
 </html>
+
