--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="sidebar">
-    <h2>Outils</h2>
+    <h2>ToutEn1</h2>
     <nav>
       <ul>
         <li><a href="cal.html">Calculette</a></li>
