--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: 'Open Sans Condensed', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #8bc6ec; /* Bleu clair */
+      background-color: rgb(76, 99, 175); /* Bleu clair */
       display: flex;
       min-height: 100vh;
     }
