--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       font-family: 'Open Sans Condensed', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: rgb(76, 99, 175); /* Bleu clair */
+      background-color: #8bc6ec; /* Bleu clair */
       display: flex;
       min-height: 100vh;
     }
     .sidebar {
-      background-color: #1e90ff; /* Bleu */
+      background-color: rgb(76, 99, 175); /* Bleu */
       color: white;
       padding: 20px;
       width: 200px;
