--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       text-align: center;
       padding: 20px;
     }
+    .header h2 {
+      font-size: 40px; /* Modification de la taille de police */
+      margin-bottom: 0; /* Suppression de la marge inférieure */
+    }
   </style>
 </head>
 <body>
@@ -87,8 +91,9 @@
   </div>
 
   <footer>
-    <p>© 2050 Touten1 - Fait par Youcef, Mohamed et Haroune pour le projet L1 d'informatique.</p>
+    <p>© 2050 Touten1 - Fait par Youcef, Mohamed et Haroun pour le projet L1 d'informatique.</p>
   </footer>
 </body>
 </html>
+
 
