--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
             <p>Email : malek2002.pro@yahoo.com</p>
         </div>
         <div class="member">
-            <h2>Mohamed</h2>
+            <h2>Mohamed Sissokho</h2>
             <p>Poste : développeur</p>
-            <p>Email : email2@example.com</p>
+            <p>Email : cissokhomohamed23@gmail.com</p>
         </div>
         <div class="member">
             <h2>Haroun</h2>
